--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="#page-top">Tangram IPFS/NFT demos</a>
+            <div class="container"><img class="masthead-avatar mb-5" style="max-width: 5%; flex-basis: 40%;" src="assets/img/tangram_logo.svg" alt="..." />
+                
+                <a class="navbar-brand" style="padding-left: 20px;" href="#page-top">Tangram IPFS/NFT demos</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -39,7 +40,7 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <span><img class="masthead-avatar mb-5" src="assets/img/wavataaars.svg" alt="..." />
-                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." /></span>
+                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." /><img class="masthead-avatar mb-5" src="assets/img/w2avataaars.svg" alt="..." /></span>
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Enter WEB3</h1>
                 <!-- Icon Divider-->
@@ -135,7 +136,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead"></p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
                 </div>
                 <!-- About Section Button-->
