--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="www.tangram.page ipfs nft demos" />
+        <meta name="author" content="MasCam64" />
         <title>Tangram IPFS/NFT demos</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -28,7 +28,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Services</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#services">Services</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                     </ul>
@@ -54,7 +54,7 @@
             </div>
         </header>
         <!-- Portfolio Section-->
-        <section class="page-section portfolio" id="portfolio">
+        <section class="page-section portfolio" id="services">
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Services & Component</h2>
@@ -136,8 +136,8 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead"></p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">Questo sito dimostrativo è stato storicizzato tramite IPFS, il sistema di distribuzione globale di oggetti web basato sui contenuti e non sugli indirizzi come http. In quanto decentralizzato fornisce garanzie sulla persistenza ed immutabilità degli oggetti caricati, utile a creare i link utilizzati negli NFT. Un nodo demo è in funzione su una delle risorse di Tangram.page a cui potete scrivere per avere la possibilità di ottenere premi in servizi e visibilità in cambio di partecipazione con i vostri ruoli professionali reali o virtuali o con donazioni anche di modesta entità!</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">This demonstration site has been historicized through IPFS, the global distribution system of web objects based on content and not on addresses such as http. As decentralized, it provides guarantees on the persistence and immutability of the loaded objects, useful for creating the links used in the NFTs. A demo node is running on one of the Tangram.page resources to which you can write to have the opportunity to obtain prizes in services and visibility in exchange for participation with your real or virtual professional roles or with even modest donations!</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
