--- a/index_en.html
+++ b/index_en.html
@@ -28,10 +28,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./index_en.html">ENG</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#services">Servizi</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#services">Services</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contatto</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +42,7 @@
                 <span><img class="masthead-avatar mb-5" src="assets/img/wavataaars.svg" alt="..." />
                 <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." /><img class="masthead-avatar mb-5" src="assets/img/w2avataaars.svg" alt="..." /></span>
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Entra nel WEB3</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Enter WEB3</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -51,14 +50,14 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Carica Distribuisci Vendi la tua arte digitale</p>
+                <p class="masthead-subheading font-weight-light mb-0">Load Distribute Sell your digital arts</p>
             </div>
         </header>
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="services">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Servizi & Componenti</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Services & Component</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
