--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-            <div class="container"><img class="masthead-avatar mb-5" style="max-width: 5%; flex-basis: 40%;" src="assets/img/tangram_logo.svg" alt="..." />
+            <div class="container"><img class="masthead-avatar mb-5" style="max-width: 5%; " src="assets/img/tangram_logo_bianco.svg" alt="..." />
                 
                 <a class="navbar-brand" style="padding-left: 20px;" href="#page-top">Tangram IPFS/NFT demos</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,7 +30,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./index_en.html">ENG</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#services">Servizi</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">Scenario</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contatto</a></li>
                     </ul>
                 </div>
@@ -70,6 +70,7 @@
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                            <h2 class="portfolio-item bg-secondary h2"></h2>
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
@@ -138,7 +139,8 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">Questo sito dimostrativo è stato storicizzato tramite IPFS, il sistema di distribuzione globale di oggetti web basato sui contenuti e non sugli indirizzi come http. In quanto decentralizzato fornisce garanzie sulla persistenza ed immutabilità degli oggetti caricati, utile a creare i link utilizzati negli NFT. Un nodo demo è in funzione su una delle risorse di Tangram.page a cui potete scrivere per avere la possibilità di ottenere premi in servizi e visibilità in cambio di partecipazione con i vostri ruoli professionali reali o virtuali o con donazioni anche di modesta entità!</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">This demonstration site has been historicized through IPFS, the global distribution system of web objects based on content and not on addresses such as http. As decentralized, it provides guarantees on the persistence and immutability of the loaded objects, useful for creating the links used in the NFTs. A demo node is running on one of the Tangram.page resources to which you can write to have the opportunity to obtain prizes in services and visibility in exchange for participation with your real or virtual professional roles or with even modest donations!</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">Mi occupo di informatica dal '90, dal '96 focalizzato su internet. Ho gestito aziende IT, gestito l'IT in aziende di produzione e di servizi di portata nazionale sviluppando gestionali implementando cruscotti di analisi OLAP. Ho iniziato su Unix 10net e Netware per poi occuparmi 15 anni su piattaforme Microsoft. dal 2017 sono tornato su Linux e mosso su piattaforma JS. Utilizzo piattaforme a microservizi e prediligo Azure ma adopero anche altri cloud provider. Ho elasticità nei linguaggi. Attualmente sviluppo risorse demo nei contesti Metaverso, NFT, Blockchain. Grazie!
+                        Puoi visitare il mio profilo LinkedIN (a piede trovi i link)</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -226,20 +228,19 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">Riferimenti</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            P.IVA 02058640679
                             <br />
-                            Clark, MO 65243
+                            www.tangram.page
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <h4 class="text-uppercase mb-4">Visita i miei profili social</h4>
+                        <a ata-toggle="tooltip" title="LinkedIN" class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/massimocamplone/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a ata-toggle="tooltip" title="WEB root" class="btn btn-outline-light btn-social mx-1" href="https://www.tangram.page/"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <a ata-toggle="tooltip" title="GitHub" class="btn btn-outline-light btn-social mx-1" href="https://github.com/maxalone/"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
@@ -255,7 +256,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2022</small></div>
+            <div class="container"><small>Copyright &copy; Tangram.page 2022</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
