--- a/index_en.html
+++ b/index_en.html
@@ -19,7 +19,7 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-            <div class="container"><img class="masthead-avatar mb-5" style="max-width: 5%; flex-basis: 40%;" src="assets/img/tangram_logo.svg" alt="..." />
+            <div class="container"><img class="masthead-avatar mb-5" style="max-width: 5%; flex-basis: 40%;" src="assets/img/tangram_logo_bianco.svg" alt="..." />
                 
                 <a class="navbar-brand" style="padding-left: 20px;" href="#page-top">Tangram IPFS/NFT demos</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
