--- a/index_en.html
+++ b/index_en.html
@@ -136,8 +136,9 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Questo sito dimostrativo è stato storicizzato tramite IPFS, il sistema di distribuzione globale di oggetti web basato sui contenuti e non sugli indirizzi come http. In quanto decentralizzato fornisce garanzie sulla persistenza ed immutabilità degli oggetti caricati, utile a creare i link utilizzati negli NFT. Un nodo demo è in funzione su una delle risorse di Tangram.page a cui potete scrivere per avere la possibilità di ottenere premi in servizi e visibilità in cambio di partecipazione con i vostri ruoli professionali reali o virtuali o con donazioni anche di modesta entità!</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">This demonstration site has been historicized through IPFS, the global distribution system of web objects based on content and not on addresses such as http. As decentralized, it provides guarantees on the persistence and immutability of the loaded objects, useful for creating the links used in the NFTs. A demo node is running on one of the Tangram.page resources to which you can write to have the opportunity to obtain prizes in services and visibility in exchange for participation with your real or virtual professional roles or with even modest donations!</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">This demonstration site has been historicized through IPFS, the global distribution system of web objects based on content and not on addresses such as http. As decentralized, it provides guarantees on the persistence and immutability of the loaded objects, useful for creating the links used in the NFTs. A demo node is running on one of the Tangram.page resources to which you can write to have the opportunity to obtain prizes in services and visibility in exchange for participation with your real or virtual professional roles or with even modest donations!</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead">I have been dealing with computer science since '90, since '96 focused on the internet. I managed IT companies, managed IT in national production and service companies by developing management systems by implementing OLAP analysis dashboards. I started on Unix 10net and Netware and then spent 15 years on Microsoft platforms. since 2017 I went back to Linux and moved to the JS platform. I use microservices platforms and I prefer Azure but I also use other cloud providers. I have flexibility in languages. Currently I develop demo resources in the Metaverso, NFT, Blockchain contexts. I am looking for partners who offer themselves with their real / virtual professional skills or even modest cash donations for the persistence of services. Thank you!
+                        You can visit my LinkedIN profile (at the foot you will find the links)</p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -225,20 +226,19 @@
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Location</h4>
+                        <h4 class="text-uppercase mb-4">Reference</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            P.IVA 02058640679
                             <br />
-                            Clark, MO 65243
+                            www.tangram.page
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <a ata-toggle="tooltip" title="LinkedIN" class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/massimocamplone/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a ata-toggle="tooltip" title="WEB root" class="btn btn-outline-light btn-social mx-1" href="https://www.tangram.page/"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <a ata-toggle="tooltip" title="GitHub" class="btn btn-outline-light btn-social mx-1" href="https://github.com/maxalone/"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
@@ -254,7 +254,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Your Website 2022</small></div>
+            <div class="container"><small>Copyright &copy; Tangram.page 2022</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
