--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
-                            <h2 class="portfolio-item h2-1">Il tuo riferimento WEB3</h2>
+                            <h2 class="portfolio-item h2-1 mx-auto">Il tuo riferimento WEB3</h2>
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="Your W3 Home partner!" />
@@ -80,6 +81,7 @@
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
+                            <h2 class="portfolio-item h2-2 mx-auto">La tua porzione di torta!</h2>
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
