--- a/test.htm
+++ b/test.htm
@@ -3,6 +3,12 @@
         <title></title>
     </head>
     <body style="background-color:black">
-        <img src="https://bafybeicoip43tnfrjgwy5ihjrpqwrtfadwzs2cdqkfs7nod5is7uo4f3jm.ipfs.dweb.link/">
+        <p>CID
+        <img src="https://bafybeicoip43tnfrjgwy5ihjrpqwrtfadwzs2cdqkfs7nod5is7uo4f3jm.ipfs.dweb.link/"> </p>>
+        <hr>
+        <p>
+           IPNS
+           <img src="https://gateway.ipfs.io/ipns/k51qzi5uqu5dmjfuy472agtns7ch34ypud7jyvjw9zlp55a4fxqiwuh2z7xtd9" >
+        </p>
     </body>
 </html>
