--- a/test.htm
+++ b/test.htm
@@ -2,13 +2,16 @@
     <head>
         <title></title>
     </head>
-    <body style="background-color:black">
+    <body style="background-color:black; color: white;">
         <p>CID
-        <img src="https://bafybeicoip43tnfrjgwy5ihjrpqwrtfadwzs2cdqkfs7nod5is7uo4f3jm.ipfs.dweb.link/"> </p>>
+        <img src="https://bafybeicoip43tnfrjgwy5ihjrpqwrtfadwzs2cdqkfs7nod5is7uo4f3jm.ipfs.dweb.link/"> </p>
         <hr>
         <p>
            IPNS
            <img src="https://gateway.ipfs.io/ipns/k51qzi5uqu5dmjfuy472agtns7ch34ypud7jyvjw9zlp55a4fxqiwuh2z7xtd9" >
         </p>
+        <hr>
+        DNSlink
+            <img src="https://gateway.ipfs.io/ipns/ipfslogo2.tangram.page/">
     </body>
 </html>
