--- a/test.htm
+++ b/test.htm
@@ -4,14 +4,22 @@
     </head>
     <body style="background-color:black; color: white;">
         <p>CID
-        <img src="https://bafybeicoip43tnfrjgwy5ihjrpqwrtfadwzs2cdqkfs7nod5is7uo4f3jm.ipfs.dweb.link/"> </p>
+            <img src="https://bafybeicoip43tnfrjgwy5ihjrpqwrtfadwzs2cdqkfs7nod5is7uo4f3jm.ipfs.dweb.link/">
+        </p>
         <hr>
         <p>
            IPNS
-           <img src="https://gateway.ipfs.io/ipns/k51qzi5uqu5dmjfuy472agtns7ch34ypud7jyvjw9zlp55a4fxqiwuh2z7xtd9" >
+           <img src="https://gateway.ipfs.io/ipns/k51qzi5uqu5dm3zl3h8im9wfrfgz3xleujdf7o9b1rea4zvy7p0v0dvsqbe9xb" >
         </p>
         <hr>
+        <p>
         DNSlink
             <img src="https://gateway.ipfs.io/ipns/ipfslogo2.tangram.page/">
+        </p>
+        <hr>
+        <p>
+            AZURE DNS
+            <img src="https://gateway.ipfs.io/ipns/logot.ipfs.tangram.page/">
+        </p>
     </body>
 </html>
