--- a/test.htm
+++ b/test.htm
@@ -14,7 +14,7 @@
         <hr>
         <p>
         DNSlink
-            <img src="https://gateway.ipfs.io/ipns/ipfslogo3.tangram.page/">
+            <img src="https://gateway.ipfs.io/ipns/ipfslogo3vom.tangram.page/">
         </p>
         <hr>
         <p>
