--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
                     <div class="col-lg-4 me-auto"><p class="lead">Mi occupo di informatica dal '90, dal '96 focalizzato su internet. Ho gestito aziende IT, gestito l'IT in aziende di produzione e di servizi di portata nazionale sviluppando gestionali implementando cruscotti di analisi OLAP. Ho iniziato su Unix 10net e Netware per poi occuparmi 15 anni su piattaforme Microsoft. dal 2017 sono tornato su Linux e mosso su piattaforma JS. Utilizzo piattaforme a microservizi e prediligo Azure ma adopero anche altri cloud provider. Ho elasticità nei linguaggi. Attualmente sviluppo risorse demo nei contesti Metaverso, NFT, Blockchain. Grazie!
                         Puoi visitare il mio profilo LinkedIN (a piede trovi i link)</p></div>
                 </div>
+                <div class="text-center mt-4">
+                    Sto ospitando <span id="kubodim"></span>MiB di dati IPFS
+                </div>
+
+
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="">
