--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
                         Puoi visitare il mio profilo LinkedIN (a piede trovi i link)</p></div>
                 </div>
                 <div class="text-center mt-4">
-                    Sto ospitando <span id="kubodim"></span>MiB di dati IPFS
+                    <img src="/assets/img/ipfslogo.png" alt="logo IPFS" width="30" >
+                    Sto ospitando <span id="kubodim"></span>MiB di dati nel nodo
+                    in <span id="kuboobj"></span> oggetti IPFS distribuiti
                 </div>
 
 
