--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                         Puoi visitare il mio profilo LinkedIN (a piede trovi i link)</p></div>
                 </div>
                 <div class="text-center mt-4">
-                    <img src="/assets/img/ipfslogo.png" alt="logo IPFS" width="30" >
-                    Sto ospitando <span id="kubodim"></span>MiB di dati nel nodo
+                    <img src="/assets/img/ipfslogo.png" alt="logo IPFS" width="30" ><br>
+                    Sto ospitando <span id="kubodim"></span>MiB di dati nel nodo<br>
                     in <span id="kuboobj"></span> oggetti IPFS distribuiti
                 </div>
 
