--- a/index.html
+++ b/index.html
@@ -148,6 +148,34 @@
                     <div class="col-lg-4 me-auto"><p class="lead">Mi occupo di informatica dal '90, dal '96 focalizzato su internet. Ho gestito aziende IT, gestito l'IT in aziende di produzione e di servizi di portata nazionale sviluppando gestionali implementando cruscotti di analisi OLAP. Ho iniziato su Unix 10net e Netware per poi occuparmi 15 anni su piattaforme Microsoft. dal 2017 sono tornato su Linux e mosso su piattaforma JS. Utilizzo piattaforme a microservizi e prediligo Azure ma adopero anche altri cloud provider. Ho elasticità nei linguaggi. Attualmente sviluppo risorse demo nei contesti Metaverso, NFT, Blockchain. Grazie!
                         Puoi visitare il mio profilo LinkedIN (a piede trovi i link)</p></div>
                 </div>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="counter">
+                                <div class="counter-icon">
+                                    <i class="fa fa-globe"></i>
+                                </div>
+                                <div class="counter-content">
+                                    <h3>Web Designing</h3>
+                                    <span class="counter-value">987</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="counter blue">
+                                <div class="counter-icon">
+                                    <i class="fa fa-rocket"></i>
+                                </div>
+                                <div class="counter-content">
+                                    <h3>Web Development</h3>
+                                    <span class="counter-value">932</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="text-center mt-4">
                     <img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="90" ><br>
                     Sto ospitando <span id="kubodim"></span>MiB di dati nel nodo<br>
@@ -159,7 +187,7 @@
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="">
                         <i class="fas fa-download me-2"></i>
-                        Free Download!
+                        Specifiche (non abilitato)!
                     </a>
                 </div>
             </div>
@@ -454,5 +482,6 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     </body>
 </html>
