--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         Puoi visitare il mio profilo LinkedIN (a piede trovi i link)</p></div>
                 </div>
 
-                <div class="container">
+                <div class="container text-center mt-4">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="counter">
@@ -157,31 +157,26 @@
                                     <i class="fa fa-globe"></i>
                                 </div>
                                 <div class="counter-content">
-                                    <h3>Web Designing</h3>
-                                    <span class="counter-value">987</span>
+                                    <h3>IPFS dati ospitati</h3>
+                                    <span class="counter-value" id="kubodim"></span>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="counter blue">
                                 <div class="counter-icon">
-                                    <i class="fa fa-rocket"></i>
+                                    <img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" >
                                 </div>
                                 <div class="counter-content">
-                                    <h3>Web Development</h3>
-                                    <span class="counter-value">932</span>
+                                    <h3>IPFS oggetti ospitati</h3>
+                                    <span class="counter-value" id="kuboobj"></span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="text-center mt-4">
-                    <img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="90" ><br>
-                    Sto ospitando <span id="kubodim"></span>MiB di dati nel nodo<br>
-                    in <span id="kuboobj"></span> oggetti IPFS distribuiti
-                </div>
-
+                
 
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -192,6 +187,7 @@
                 </div>
             </div>
         </section>
+
         <!-- Contact Section-->
         <section class="page-section" id="contact">
             <div class="container">
