--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
 
                 <div class="text-center mt-4">
-                    <div class="row">
+                    <div class="row text-center mt-4">
                         <div class="col-md-3 col-sm-6">
                             <div class="counter">
                                 <div class="counter-icon">
@@ -164,9 +164,9 @@
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="counter blue">
-                                
-                                <img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" >
-                                
+                                <div class="counter-icon">
+                                    <img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" >
+                                </div>
                                 <div class="counter-content">
                                     <h3>oggetti ospitati</h3>
                                     <span class="counter-value" id="kuboobj"></span>
