--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
                                     <i class="fa fa-globe"></i>
                                 </div>
                                 <div class="counter-content">
-                                    <h3>IPFS Nodo globale</h3>
-                                    <span class="counter-value" id="kubodim"></span> MiB
+                                    <h3>IPFS Nodo globale MiB</h3>
+                                    <span class="counter-value" id="kubodim"></span> 
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
                             <div class="counter blue">
                                 <div class="counter-icon">
-                                    <img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" >
+                                    <i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" ></i>
                                 </div>
                                 <div class="counter-content">
                                     <h3>oggetti ospitati</h3>
