--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                 <p class="masthead-subheading font-weight-light mb-0">Carica Distribuisci Vendi la tua arte digitale</p>
             </div>
             
-            <div class="text-center mt-4">
-                <div class="row text-center mt-4">
+            <div class="container d-flex align-items-center flex-column">
+                <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <div class="counter">
                             <div class="counter-icon">
                                 <i class="fa fa-globe"></i>
                             </div>
                             <div class="counter-content">
-                                <h3>IPFS Nodo globale MiB</h3>
+                                <h3>IPFS Nodo globale MB</h3>
                                 <span class="counter-value" id="kubodim"></span> 
                             </div>
                         </div>
