--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Carica Distribuisci Vendi la tua arte digitale</p>
+                <p class="masthead-subheading font-weight-light mb-0">Carica Distribuisci Vendi la tua arte digitale, semplicemente</p>
+                <p></p>
             </div>
             
             <div class="container">
