--- a/index.html
+++ b/index.html
@@ -52,9 +52,14 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Carica Distribuisci Vendi la tua arte digitale, semplicemente</p>
-                <p></p>
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" ></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
             </div>
             
+
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
@@ -71,10 +76,10 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="counter blue">
                             <div class="counter-icon">
-                                <i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" ></i>
+                                <i class="fa fa-files-o"></i>
                             </div>
                             <div class="counter-content">
-                                <h3>oggetti ospitati</h3>
+                                <h3>IPFS ospitati</h3>
                                 <span class="counter-value" id="kuboobj"></span>
                             </div>
                         </div>
