--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <i class="fa fa-globe"></i>
                             </div>
                             <div class="counter-content">
-                                <h3>IPFS Nodo MB</h3>
+                                <h3>Spazio Nodo MB</h3>
                                 <span class="counter-value" id="kubodim"></span> 
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                                 <i class="fa fa-files-o"></i>
                             </div>
                             <div class="counter-content">
-                                <h3>IPFS ospitati</h3>
+                                <h3>Oggetti ospitati</h3>
                                 <span class="counter-value" id="kuboobj"></span>
                             </div>
                         </div>
