--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="counter blue">
                             <div class="counter-icon">
-                                <i class="fa fa-files-o"></i>
+                                <i class="fa fa-copy"></i>
                             </div>
                             <div class="counter-content">
                                 <h3>Oggetti ospitati</h3>
