--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Carica Distribuisci Vendi la tua arte digitale, semplicemente</p>
+                <p class="masthead-subheading font-weight-light mb-0">Carica Mostra Vendi la tua arte digitale o reale, semplicemente</p>
+                <p class="masthead-subheading font-weight-light mb-0">IPFS NFT Blockchain resi facili</p>
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" ></i></div>
+                    <div class="divider-custom-icon"><i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" data-toggle="popover" title="Popover title" data-content="IPFS è il sistema distribuito e sicuro per archiviare file in maniera immutabile. Approfondisci su <a href='https://ipfs.tech/media'>IPFS press kit</a>" ></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
             </div>
