--- a/index.html
+++ b/index.html
@@ -55,38 +55,45 @@
                 <p class="masthead-subheading font-weight-light mb-0">IPFS NFT Blockchain resi facili</p>
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" data-toggle="popover" title="Popover title" data-content="IPFS è il sistema distribuito e sicuro per archiviare file in maniera immutabile. Approfondisci su <a href='https://ipfs.tech/media'>IPFS press kit</a>" ></i></div>
+                    <div class="divider-custom-icon"><i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" data-toggle="popover" title="Che cos'è IPFS" data-content="IPFS è il sistema distribuito e decentralizzato e sicuro per archiviare file in maniera immutabile per offrirti la certezza che la tua opera non subisca manomissioni. Approfondisci su <a href='https://ipfs.tech/media'>IPFS press kit</a>" ></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="counter">
+                                <div class="counter-icon">
+                                    <i class="fa fa-globe"></i>
+                                </div>
+                                <div class="counter-content">
+                                    <h3>Spazio Nodo MB</h3>
+                                    <span class="counter-value" id="kubodim"></span> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="counter blue">
+                                <div class="counter-icon">
+                                    <i class="fa fa-copy"></i>
+                                </div>
+                                <div class="counter-content">
+                                    <h3>Oggetti ospitati</h3>
+                                    <span class="counter-value" id="kuboobj"></span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i><img src="/assets/img/opensimulator.png" alt="logo IPFS" width="70" data-toggle="popover" title="Quale Metaverso" data-content="OpenSimulator è il metaverso OpenSource più noto e più potente. Il Grid è attualmente privato ma puoi chiedere account gratuito! Potrai stabilire una formula di partecipazione per organizzare i tuoi eventi e mostre. Approfondisci su <a href='https://meta.tangram.page/'>Meta.tangram.page</a>" ></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+
             </div>
             
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="counter">
-                            <div class="counter-icon">
-                                <i class="fa fa-globe"></i>
-                            </div>
-                            <div class="counter-content">
-                                <h3>Spazio Nodo MB</h3>
-                                <span class="counter-value" id="kubodim"></span> 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="counter blue">
-                            <div class="counter-icon">
-                                <i class="fa fa-copy"></i>
-                            </div>
-                            <div class="counter-content">
-                                <h3>Oggetti ospitati</h3>
-                                <span class="counter-value" id="kuboobj"></span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
 
         </header>
         <!-- Portfolio Section-->
