--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="divider-custom-icon"><i><img src="/assets/img/portfolio/ipfslogo.png" alt="logo IPFS" width="70" data-toggle="popover" title="Che cos'è IPFS" data-content="IPFS è il sistema distribuito e decentralizzato e sicuro per archiviare file in maniera immutabile per offrirti la certezza che la tua opera non subisca manomissioni. Approfondisci su <a href='https://ipfs.tech/media'>IPFS press kit</a>" ></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <div class="container">
+                <div class="text-center">
                     <div class="row">
                         <div class="col-md-3 col-sm-6">
                             <div class="counter">
@@ -86,10 +86,35 @@
                 </div>
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i><img src="/assets/img/opensimulator.png" alt="logo IPFS" width="70" data-toggle="popover" title="Quale Metaverso" data-content="OpenSimulator è il metaverso OpenSource più noto e più potente. Il Grid è attualmente privato ma puoi chiedere account gratuito! Potrai stabilire una formula di partecipazione per organizzare i tuoi eventi e mostre. Approfondisci su <a href='https://meta.tangram.page/'>Meta.tangram.page</a>" ></i></div>
+                    <div class="divider-custom-icon"><i><img src="/assets/img/opensimulator.png" alt="logo OpenSimulator" width="100" data-toggle="popover" title="Quale Metaverso" data-content="OpenSimulator è il metaverso OpenSource più noto e più potente. Il Grid è attualmente privato ma puoi chiedere account gratuito! Potrai stabilire una formula di partecipazione per organizzare i tuoi eventi e mostre. Approfondisci su <a href='https://meta.tangram.page/'>Meta.tangram.page</a>" ></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-
+                <div class="text-center">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6">
+                            <div class="counter red">
+                                <div class="counter-icon">
+                                    <i class="fa fa-building-columns"></i>
+                                </div>
+                                <div class="counter-content">
+                                    <h3>Regioni</h3>
+                                    <span class="counter-value">3</span> 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6">
+                            <div class="counter gray">
+                                <div class="counter-icon">
+                                    <i class="fa fa-image"></i>
+                                </div>
+                                <div class="counter-content">
+                                    <h3>Oggetti ospitati</h3>
+                                    <span class="counter-value">2800</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             
 
