--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contattami</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -247,14 +247,14 @@
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="email">Email address</label>
+                                <label for="email">Email</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">Email richiesta.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email non valida.</div>
                             </div>
                             <!-- Message input-->
                             <div class="form-floating mb-3">
-                                <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
+                                <textarea class="form-control" id="message" type="text" placeholder="Dimmi cosa ti può interessare, partecipazione? utilizzo? patrocinio?" style="height: 10rem" data-sb-validations="required"></textarea>
+                                <label for="message">Messaggio</label>
                                 <div class="invalid-feedback" data-sb-feedback="message:required">Messaggio richiesto.</div>
                             </div>
                             <!-- Submit success message-->
@@ -263,16 +263,16 @@
                             <!-- has successfully submitted-->
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
+                                    <div class="fw-bolder">Messaggio inviato!</div>
                                 </div>
                             </div>
                             <!-- Submit error message-->
                             <!---->
                             <!-- This is what your users will see when there is-->
                             <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Errore inviando il messaggio!</div></div>
                             <!-- Submit Button-->
-                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
+                            <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Invia</button>
                         </form>
                     </div>
                 </div>
